syntax = "proto3";
package mvirt.net;

service NetService {
  // System
  rpc GetVersion(GetVersionRequest) returns (VersionInfo);

  // Network operations
  rpc CreateNetwork(CreateNetworkRequest) returns (Network);
  rpc GetNetwork(GetNetworkRequest) returns (Network);
  rpc ListNetworks(ListNetworksRequest) returns (ListNetworksResponse);
  rpc UpdateNetwork(UpdateNetworkRequest) returns (Network);
  rpc DeleteNetwork(DeleteNetworkRequest) returns (DeleteNetworkResponse);

  // NIC operations
  rpc CreateNic(CreateNicRequest) returns (Nic);
  rpc GetNic(GetNicRequest) returns (Nic);
  rpc ListNics(ListNicsRequest) returns (ListNicsResponse);
  rpc UpdateNic(UpdateNicRequest) returns (Nic);
  rpc DeleteNic(DeleteNicRequest) returns (DeleteNicResponse);

  // Attach NIC to TAP device (called when VM starts)
  rpc AttachNic(AttachNicRequest) returns (AttachNicResponse);

  // Security Group operations
  rpc CreateSecurityGroup(CreateSecurityGroupRequest) returns (SecurityGroup);
  rpc GetSecurityGroup(GetSecurityGroupRequest) returns (SecurityGroup);
  rpc ListSecurityGroups(ListSecurityGroupsRequest) returns (ListSecurityGroupsResponse);
  rpc DeleteSecurityGroup(DeleteSecurityGroupRequest) returns (DeleteSecurityGroupResponse);
  rpc AddSecurityGroupRule(AddSecurityGroupRuleRequest) returns (SecurityGroupRule);
  rpc RemoveSecurityGroupRule(RemoveSecurityGroupRuleRequest) returns (RemoveSecurityGroupRuleResponse);
  rpc AttachSecurityGroup(AttachSecurityGroupRequest) returns (AttachSecurityGroupResponse);
  rpc DetachSecurityGroup(DetachSecurityGroupRequest) returns (DetachSecurityGroupResponse);
}

// === System Messages ===

message GetVersionRequest {}

message VersionInfo {
  string version = 1;
}

// === Core Messages ===

message Network {
  string id = 1;                     // UUID
  string name = 2;                   // Unique name

  // IPv4 configuration
  bool ipv4_enabled = 3;
  string ipv4_subnet = 4;            // CIDR notation, e.g., "10.0.0.0/24"

  // IPv6 configuration
  bool ipv6_enabled = 5;
  string ipv6_prefix = 6;            // CIDR notation, e.g., "fd00::/64"

  // Services announced via DHCP
  repeated string dns_servers = 7;
  repeated string ntp_servers = 8;

  // Statistics
  uint32 nic_count = 9;              // Number of NICs in this network

  string created_at = 10;            // ISO 8601
  string updated_at = 11;

  // Public network flag - enables internet access via TUN device
  bool is_public = 12;
}

message Nic {
  string id = 1;                     // UUID
  string name = 2;                   // Optional friendly name
  string network_id = 3;             // FK -> Network

  string mac_address = 4;            // e.g., "52:54:00:12:34:56"

  // Assigned addresses (via DHCP to VM)
  string ipv4_address = 5;           // /32, e.g., "10.0.0.5"
  string ipv6_address = 6;           // /128, e.g., "fd00::5"

  // Routed prefixes (traffic to these goes to this NIC)
  repeated string routed_ipv4_prefixes = 7;  // CIDR notation
  repeated string routed_ipv6_prefixes = 8;

  // vhost-user socket
  string socket_path = 9;            // e.g., "/run/mvirt-net/nic-xxx.sock"

  NicState state = 10;

  string created_at = 11;
  string updated_at = 12;
}

enum NicState {
  NIC_STATE_UNSPECIFIED = 0;
  NIC_STATE_CREATED = 1;             // Socket ready, VM not connected
  NIC_STATE_ACTIVE = 2;              // VM connected
  NIC_STATE_ERROR = 3;               // Error state
}

// === Network Request/Response Messages ===

message CreateNetworkRequest {
  string name = 1;                   // Required: unique name

  // IPv4 (at least one of ipv4 or ipv6 must be enabled)
  bool ipv4_enabled = 2;
  string ipv4_subnet = 3;            // Required if ipv4_enabled

  // IPv6
  bool ipv6_enabled = 4;
  string ipv6_prefix = 5;            // Required if ipv6_enabled

  // Services
  repeated string dns_servers = 6;
  repeated string ntp_servers = 7;

  // Public network flag - enables internet access via TUN device
  bool is_public = 8;
}

message GetNetworkRequest {
  oneof identifier {
    string id = 1;
    string name = 2;
  }
}

message ListNetworksRequest {}

message ListNetworksResponse {
  repeated Network networks = 1;
}

message UpdateNetworkRequest {
  string id = 1;                     // Required

  // Only these fields can be updated
  repeated string dns_servers = 2;
  repeated string ntp_servers = 3;
}

message DeleteNetworkRequest {
  string id = 1;
  bool force = 2;                    // Delete even if NICs exist
}

message DeleteNetworkResponse {
  bool deleted = 1;
  uint32 nics_deleted = 2;           // Number of NICs also deleted (if force=true)
}

// === NIC Request/Response Messages ===

message CreateNicRequest {
  string network_id = 1;             // Required: network UUID or name
  string name = 2;                   // Optional: friendly name

  // Optional: specify MAC (auto-generated if empty)
  string mac_address = 3;

  // Optional: request specific addresses (auto-allocated if empty)
  string ipv4_address = 4;
  string ipv6_address = 5;

  // Optional: routed prefixes
  repeated string routed_ipv4_prefixes = 6;
  repeated string routed_ipv6_prefixes = 7;
}

message GetNicRequest {
  oneof identifier {
    string id = 1;
    string name = 2;
  }
}

message ListNicsRequest {
  string network_id = 1;             // Optional: filter by network
}

message ListNicsResponse {
  repeated Nic nics = 1;
}

message UpdateNicRequest {
  string id = 1;                     // Required

  // Routed prefixes can be added/removed
  // These replace the existing prefixes (not additive)
  repeated string routed_ipv4_prefixes = 2;
  repeated string routed_ipv6_prefixes = 3;
}

message DeleteNicRequest {
  string id = 1;
}

message DeleteNicResponse {
  bool deleted = 1;
}

message AttachNicRequest {
  string id = 1;                     // NIC UUID
}

message AttachNicResponse {
  bool attached = 1;                 // true if TAP found and attached
  string message = 2;                // Status message
}

// === Security Group Messages ===

message SecurityGroup {
  string id = 1;                           // UUID
  string name = 2;                         // Unique name
  string description = 3;                  // Optional description
  repeated SecurityGroupRule rules = 4;   // Rules in this group
  uint32 nic_count = 5;                   // Number of NICs using this group
  string created_at = 6;                   // ISO 8601
  string updated_at = 7;
}

message SecurityGroupRule {
  string id = 1;                           // UUID
  string security_group_id = 2;            // FK -> SecurityGroup
  RuleDirection direction = 3;             // ingress or egress
  RuleProtocol protocol = 4;               // Protocol to match
  uint32 port_start = 5;                   // Start of port range (0 = any)
  uint32 port_end = 6;                     // End of port range (0 = any)
  string cidr = 7;                         // CIDR to match (empty = any)
  string description = 8;                  // Optional description
  string created_at = 9;
  string updated_at = 10;
}

enum RuleDirection {
  RULE_DIRECTION_UNSPECIFIED = 0;
  RULE_DIRECTION_INGRESS = 1;              // Traffic to VM
  RULE_DIRECTION_EGRESS = 2;               // Traffic from VM
}

enum RuleProtocol {
  RULE_PROTOCOL_UNSPECIFIED = 0;
  RULE_PROTOCOL_ALL = 1;                   // All protocols
  RULE_PROTOCOL_TCP = 2;
  RULE_PROTOCOL_UDP = 3;
  RULE_PROTOCOL_ICMP = 4;                  // ICMPv4
  RULE_PROTOCOL_ICMPV6 = 5;                // ICMPv6
}

// === Security Group Request/Response Messages ===

message CreateSecurityGroupRequest {
  string name = 1;                         // Required: unique name
  string description = 2;                  // Optional
}

message GetSecurityGroupRequest {
  oneof identifier {
    string id = 1;
    string name = 2;
  }
}

message ListSecurityGroupsRequest {}

message ListSecurityGroupsResponse {
  repeated SecurityGroup security_groups = 1;
}

message DeleteSecurityGroupRequest {
  string id = 1;
  bool force = 2;                          // Delete even if attached to NICs
}

message DeleteSecurityGroupResponse {
  bool deleted = 1;
  uint32 nics_detached = 2;                // Number of NICs detached (if force=true)
}

message AddSecurityGroupRuleRequest {
  string security_group_id = 1;            // Required: UUID or name
  RuleDirection direction = 2;             // Required
  RuleProtocol protocol = 3;               // Required
  uint32 port_start = 4;                   // Optional: 0 = any
  uint32 port_end = 5;                     // Optional: 0 = any (or same as port_start)
  string cidr = 6;                         // Optional: empty = any
  string description = 7;                  // Optional
}

message RemoveSecurityGroupRuleRequest {
  string rule_id = 1;                      // Required: rule UUID
}

message RemoveSecurityGroupRuleResponse {
  bool deleted = 1;
}

message AttachSecurityGroupRequest {
  string nic_id = 1;                       // Required: NIC UUID or name
  string security_group_id = 2;            // Required: SecurityGroup UUID or name
}

message AttachSecurityGroupResponse {
  bool attached = 1;                       // false if already attached
}

message DetachSecurityGroupRequest {
  string nic_id = 1;                       // Required: NIC UUID or name
  string security_group_id = 2;            // Required: SecurityGroup UUID or name
}

message DetachSecurityGroupResponse {
  bool detached = 1;                       // false if was not attached
}
